# PDF-Markdown-Studio

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: build-desktop.yml
licenses/: ENGINE_THIRD_PARTY_LICENSES_FULL.md  THIRD_PARTY_NOTICES_ALL.md
logo/macos/: AppIcon.icns
packaging/linux/: pdf-markdown-studio.desktop
packaging/macos/: README.md
runtime-manifests/: engine-manifest-sources.json  engine-manifest.json
scripts/: build_linux_deb.py  build_macos_dmg.sh  ci_fetch_engine_runtime.py  generate_demo_pdf.py  regenerate-third-party-licenses.ps1  setup_macos_build_env.sh  unblock-unsigned-runtime.sh
src/: app_config.rs  engine_bindings.rs  main.rs  runtime_manager.rs
