[package]
name = "pdf_markdown_studio"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = true }
egui = "0.33.3"
egui_commonmark = { version = "0.22.0", default-features = true }
image = { version = "0.25.8", default-features = true }
libloading = "0.9.0"
pdfium-render = { version = "0.8.37", default-features = true }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
flate2 = "1.1.5"
tar = "0.4.44"
zip = { version = "6.0.0", default-features = true }
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
